--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,26 +5,26 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  # build:
 
-    runs-on: ubuntu-latest
+  #   runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x, 14.x, 15.x]
+  #   strategy:
+  #     matrix:
+  #       node-version: [10.x, 12.x, 14.x, 15.x]
 
-    steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js 14.x
-        uses: actions/setup-node@v3
-        with:
-          node-version: '14.x'
-      - name: Install dependencies
-        run: | 
-          cd rate-my-club
-          npm ci
-      - run: npm run build --if-present
-      - run: npm test
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Use Node.js 14.x
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: '14.x'
+  #     - name: Install dependencies
+  #       run: | 
+  #         cd rate-my-club
+  #         npm ci
+  #     - run: npm run build --if-present
+  #     - run: npm test
 
   build:
 
