--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pwd
           pip install -r ../../requirements.txt
           python -m uvicorn backend/server:app --reload
     
