--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pwd
-          pip install -r ../../requirements.txt
+          pip install -r ../requirements.txt
           python -m uvicorn backend/server:app --reload
     
     
