--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pwd
-          pip install -r ../requirements.txt
+          ls
+          cd .. | ls
+          cd .. | cd .. | ls
+          pip install -r requirements.txt
           python -m uvicorn backend/server:app --reload
     
     
