split server run from install

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,6 +43,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          python -m uvicorn backend/server:app --reload
+      - name: Run Server
+        run: python -m uvicorn backend/server:app --reload
     
     
