--- a/.github/workflows/build_backend.yml
+++ b/.github/workflows/build_backend.yml
@@ -7,10 +7,11 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.9"]
 
     steps:
