--- a/.github/workflows/build_frontend.yml
+++ b/.github/workflows/build_frontend.yml
@@ -24,5 +24,7 @@ jobs:
         run: | 
           cd rate-my-club
           npm ci
-      - run: npm run build --if-present
-      - run: npm test
+      - name: Run build
+        run: npm run build --if-present
+      - name: Run tests
+        run: npm test
