--- a/.github/workflows/build_frontend.yml
+++ b/.github/workflows/build_frontend.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Install dependencies
         run: | 
           cd rate-my-club
+          npm install google
           npm ci
       - name: Run build
         run: npm run build --if-present
