--- a/.github/workflows/build_frontend.yml
+++ b/.github/workflows/build_frontend.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: | 
           cd rate-my-club
-          npm ci
+          npm install
       - name: Run build
         run: npm run build --if-present
       - name: Run tests
