--- a/.github/workflows/build_frontend.yml
+++ b/.github/workflows/build_frontend.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: '14.x'
       - name: Install dependencies
         run: | 
-          cd rate-my-club | ls
+          cd rate-my-club/rate-my-club | ls
           npm install
       - name: Run build
         run: npm run build --if-present
