--- a/.github/workflows/build_frontend.yml
+++ b/.github/workflows/build_frontend.yml
@@ -26,8 +26,8 @@ jobs:
           node-version: '14.x'
       - name: Install dependencies
         run: | 
-          ls -l
-          pwd
+          npm cache clean --force
+          rm -rf node_modules
           npm install
       - name: Run build
         run: npm run build --if-present
