--- a/.github/workflows/build_frontend.yml
+++ b/.github/workflows/build_frontend.yml
@@ -26,10 +26,7 @@ jobs:
           node-version: '14.x'
       - name: Install dependencies
         run: | 
-          npm cache clean --force
-          rm -rf node_modules
-          rm package-lock.json
-          npm install
+          npm ci
       - name: Run build
         run: npm run build --if-present
       - name: Run tests
