--- a/.github/workflows/build_frontend.yml
+++ b/.github/workflows/build_frontend.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [self-hosted]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         node-version: [14.x]
 
     steps:
@@ -28,6 +28,6 @@ jobs:
         run: | 
           npm ci
       - name: Run build
-        run: npm run build --if-present
+        run: CI=false npm run build --if-present
       - name: Run tests
         run: npm test
