Build Frontend + Backend, no tests

--- a/.github/workflows/build_frontend.yml
+++ b/.github/workflows/build_frontend.yml
@@ -29,5 +29,5 @@ jobs:
           npm ci
       - name: Run build
         run: CI=false npm run build --if-present
-      - name: Run tests
-        run: npm test
+      # - name: Run tests
+      #   run: npm test
