--- a/.github/workflows/build_frontend.yml
+++ b/.github/workflows/build_frontend.yml
@@ -34,6 +34,7 @@ jobs:
           else
               CI=false npm run build --if-present
           fi
+        shell: bash
           
       # - name: Run tests
       #   run: npm test
