--- a/.github/workflows/build_backend.yml
+++ b/.github/workflows/build_backend.yml
@@ -14,6 +14,7 @@ jobs:
         working-directory: ./backend
 
     strategy:
+      max-parallel: 5
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.9"]
@@ -26,6 +27,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
+          set -ex
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo apt install ./google-chrome-stable_current_amd64.deb  
           python -m pip install --upgrade pip
           pip install flake8 pytest
           pip install -r requirements.txt
@@ -37,6 +41,7 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-          pytest
+          python -m uvicorn server:app & sleep 5
+          python -m pytest -U http://localhost:8000/ --browser headless-chrome
     
     
