--- a/.github/workflows/build_backend.yml
+++ b/.github/workflows/build_backend.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       max-parallel: 5
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
         python-version: ["3.9"]
 
     steps:
