--- a/.github/workflows/build_backend.yml
+++ b/.github/workflows/build_backend.yml
@@ -31,6 +31,7 @@ jobs:
           wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
           sudo apt install ./google-chrome-stable_current_amd64.deb  
           python -m pip install --upgrade pip
+          pip install flake8 pytest
           pip install -r requirements.txt
           pip install msedge-selenium-tools
     - uses: nanasess/setup-chromedriver@v1
@@ -40,9 +41,4 @@ jobs:
           python -m uvicorn server:app & sleep 5
           python -m pytest -U http://localhost:8000/ --browser headless-chrome
     
-    # - name: Lint with flake8
-    #     run: |
-    #       # stop the build if there are Python syntax errors or undefined names
-    #       flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-    #       # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-    #       flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    
