--- a/.github/workflows/build_backend.yml
+++ b/.github/workflows/build_backend.yml
@@ -33,6 +33,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install flake8 pytest
           pip install -r requirements.txt
+          pip install msedge-selenium-tools
+      - uses: nanasess/setup-chromedriver@v1
+      - run: chromedriver --url-base=/wd/hub &amp;
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
