--- a/.github/workflows/build_backend.yml
+++ b/.github/workflows/build_backend.yml
@@ -38,7 +38,7 @@ jobs:
       - run: chromedriver --url-base=/wd/hub &
       - name: Test with pytest
         run: |
-          ping ac-3tsoefc-shard-00-02.ad0kwzt.mongodb.net
-
+          python -m uvicorn server:app & sleep 5
+          pytest
     
     
