--- a/.github/workflows/build_backend.yml
+++ b/.github/workflows/build_backend.yml
@@ -34,11 +34,18 @@ jobs:
           pip install flake8 pytest
           pip install -r requirements.txt
           pip install msedge-selenium-tools
+      - name: Lint with flake8
+        run: |
+          # stop the build if there are Python syntax errors or undefined names
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - uses: nanasess/setup-chromedriver@v1
       - run: chromedriver --url-base=/wd/hub &
-      - name: Test with pytest
+      - name: Run Server and Kill
         run: |
           python -m uvicorn server:app & sleep 5
-          pytest
+          kill -INT 888
+          
     
     
