--- a/.github/workflows/build_backend.yml
+++ b/.github/workflows/build_backend.yml
@@ -45,7 +45,8 @@ jobs:
       - name: Run Server and Kill
         run: |
           python -m uvicorn server:app & PID=$! & sleep 5
-          kill -INT $PID
+          echo PID is $PID
+          kill -TERM $PID
           
     
     
